# ccm-backend

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_core_tables.py  0002_cricket_tables.py  0003_match_tables.py  0004_roles_system.py  0005_auth_password.py  0006_platform_features.py  0007_registration_and_announcements.py  0008_payments_notifications_extras.py  0009_match_scoring_lifecycle.py  0010_team_recommendation.py  0011_faqs_messaging_merchandise_media.py  0012_play_cricket_integration.py
app/: config.py  main.py
app/api/: router.py
app/core/: database.py  dependencies.py  exception_handlers.py  exceptions.py  pagination.py  permissions.py  security.py
app/integrations/: play_cricket_client.py  play_cricket_mappers.py
app/models/: __init__.py  announcement.py  audit_log.py  base.py  batting_entry.py  bowling_entry.py  channel.py  club.py  club_key_person.py  club_member.py  fall_of_wicket.py  faq.py  fee_config.py  fixture_series.py  fixture_type.py  match.py  match_audit_log.py  match_availability.py  match_innings.py  match_opposition_player.py  match_participation.py  media_gallery.py  media_item.py  media_tag.py  merchandise_category.py  merchandise_item.py  merchandise_order.py  merchandise_order_item.py  merchandise_variant.py  message.py  message_reaction.py  notification.py  payment.py  pending_club_registration.py  platform_admin.py  platform_setting.py  player.py  player_match_stats.py  player_selection_override.py  poll.py  (+14 more)
app/schemas/: announcement.py  auth.py  club.py  common.py  (+25 more)
infrastructure/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
nginx/: api.conf
tests/: conftest.py  test_auth.py  test_clubs.py  test_health.py  test_matches.py  test_members.py  test_permissions.py  test_play_cricket.py  test_play_cricket_mappers.py
(+82 files in other folders)
